# atip

./: .copier-answers.yml  .deepsource.toml  .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  INSTALL.rst  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  SOFT-IOC.rst  catalog-info.yaml  demo_commands.txt  old_tutorial.ipynb  pyproject.toml  pytac_tutorial.ipynb  requirements.txt  setup.cfg  setup.py  start-ioc  start-virtac  switcher.json  tutorial.ipynb  vmx.mat
.github/: CONTRIBUTING.md
.github/workflows/: _docs.yml  _pypi.yml  ci.yml  code.yml
.ipynb_checkpoints/: tutorial-checkpoint.ipynb
0.1.1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.1.1/.doctrees/: tutorials.doctree
0.1.1/_api/: atip.html  atip.load_sim.html  atip.sim_data_sources.html  atip.simulator.html  atip.utils.html  virtac.atip_ioc_entry.html  virtac.atip_server.html  virtac.create_csv.html  virtac.html  virtac.masks.html  virtac.mirror_objects.html
0.1.1/_modules/: index.html
0.1.1/explanations/: decisions.html  feedback_systems.html  implementation_details.html
0.1.1/how-to/: contribute.html  run-container.html
0.1.1/tutorials/: atip_example.html  installation.html  overview.html  virtac_example.html
0.2.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
at_installation/: .gitignore
atip/: SimDataSource.py  SimulatorModel.py  __init__.py  at_interface.py  create_feedback_csv.py  ease.py  examples.py  feedback.csv  load_sim.py  sim_data_source.py  sim_data_sources.py  simulator.py  soft_ioc.py  utils.py
docs/: _api.rst  atip.rst  atip_class_diagram.uml  conda_env.yml  conf.py  explanations.md  index.rst  reference.md  requirements.txt  tutorials.md
helper_ioc/: helper_ioc_entry.py
ioc/: README.rst  SOFT-IOC.rst  atip_ioc_entry.py  atip_server.py  create_csv.py  create_feedback_csv.py  diad.mat  feedback.csv  limits.csv  masks.py  mirror_objects.py  mirrored.csv  pv_limits.csv  solution.py  start-ticker  ticker.db  tunefb.csv
main/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
rings/: create_lattice_matfile.m  diad.mat  vmx.mat  vmxsp.mat
switch_to_copier_template/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
test/: conftest.py  test_accelerator_data_object.py  test_at_elem_ds.py  test_at_simulator_object.py  test_element_data_source.py  test_lattice_data_source.py  test_load.py
testing_gh_pages/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
tests/: conftest.py  test_at_simulator_object.py  test_cli.py  test_element_data_source.py  test_lattice_data_source.py  test_load.py
virtac/: FEEDBACK_SYSTEMS.rst  Pipfile  README.rst  __init__.py  atip_ioc_entry.py  atip_server.py  create_csv.py  feedback_systems.rst  masks.py  mirror_objects.py  start-virtac
(+244 files in other folders)
