[metadata]
name = atip
version = 0.0.2
description = ATIP: Accelerator Toolbox Interface for Pytac
long-description = file: README.rst
author = Tobyn Nicholls
license = Apache License 2.0
url = https://github.com/dls-controls/atip
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords = accelerator physics

[files]
package_data =
    atip = atip/rings/*.m*

[options]
packages =
    atip
include_package_data = true
python_requires = >=2.7.4
install_requires =
    # Ensure numpy and scipy are compatible with Python 2.
    numpy<1.17.0
    scipy<1.3.0
    pytac>=0.3.0
    accelerator-toolbox>=0.0.2
    cothread

[coverage:run]
omit =
    atip/ease.py
    atip/utils.py
    */junk/*
    */venv*

[flake8]
exclude =
    .git
    atip/junk
    venv*
    docs
    build

[bdist_wheel]
universal = 1
