[metadata]
name = atip
version = 0.2.0
description = ATIP: Accelerator Toolbox Interface for Pytac
long-description = file: README.rst
author = Tobyn Nicholls
license = Apache License 2.0
url = https://github.com/DiamondLightSource/atip
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = accelerator physics

[options]
packages =
    atip
    virtac
include_package_data = true
install_requires =
    numpy
    scipy
    pytac>=0.6.0
    accelerator-toolbox>=0.4.0
    cothread
    softioc

[options.entry_points]
console_scripts =
    virtac = virtac.atip_ioc_entry:main

[coverage:run]
omit =
    atip/ease.py
    atip/utils.py
    */junk/*
    */venv*

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
exclude =
    .git
    atip/junk
    venv*
    docs
    build

[bdist_wheel]
universal = 1
